# libvips

libvips/foreign/: ansiload.c  ansisave.c  foreign.c  meson.build  pforeign.h  qoiload.c  qoirload.c  qoirsave.c  qoisave.c
libvips/foreign/qoir/: update.sh
